[package]
name = "text-replacer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3.4" # Clipboard support
rdev = "0.5"    # Global hotkey support
tray-icon = "0.19"
tao = "0.30" # Required for the macOS event loop
